--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,6 +12,8 @@ server:
     session:
       cookie:
         http-only: true
+  shutdown: graceful
+
 # 1 days = 1 * 24 * 60 * 60
 cookie:
   maxAge: 86400
@@ -80,6 +82,11 @@ management:
     web:
       exposure:
         include: "*"
+  health:
+    readiness-state:
+      enabled: true
+    liveness-state:
+      enabled: true
   endpoint:
     health:
       show-details: ALWAYS
