--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>agus.ramdan.cdt</groupId>
 	<artifactId>api-cdt-event-service</artifactId>
 	<version>21.3.4.4.0.20250331</version>
-	<name>api-cdt-event-services</name>
+	<name>api-cdt-event-service</name>
 	<description>Processing Even Log From External System</description>
 	<url/>
 	<licenses>
